# isaac-sim-synth-data

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  isaac-sim.sh
configs/: dataset.yaml
docker/: Dockerfile
legacy_python/: build_scene.py  export_annotations.py  generate_dataset.py  randomize_scene.py  sensors.py
scenes/: base_scene.usda
src/: DataExporter.cpp  DataExporter.hpp  Randomizer.cpp  Randomizer.hpp  SceneBuilder.cpp  SceneBuilder.hpp  SensorManager.cpp  SensorManager.hpp  main.cpp
